--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,8 @@ name = "taxi-trips-data-pipeline"
 version = "0.0.1"
 requires-python = ">=3.14"
 dependencies = [
+    "apache-airflow==3.1.5",
+    "apache-airflow-providers-postgres>=6.5.1",
     "kagglehub[pandas-datasets]>=0.3.13",
 ]
 
