--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # AirFlow
 AIRFLOW_UID=50000
+_AIRFLOW_WWW_USER_USERNAME=airflow
+_AIRFLOW_WWW_USER_PASSWORD=strong_password  # Strictly recommended to change
 
 # PostgreSQL
 POSTGRES_DB=TaxiTripsDB
