--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [project]
 name = "taxi-trips-data-pipeline"
 version = "0.0.1"
-requires-python = ">=3.14"
+requires-python = "==3.12"
 dependencies = [
     "apache-airflow[postgres]==3.1.5",
+    "dbt-core>=1.11.2",
+    "dbt-postgres>=1.10.0",
     "kagglehub[pandas-datasets]>=0.3.13",
 ]
 
@@ -18,7 +20,7 @@ dev = [
 strict = []
 
 [tool.ruff]
-target-version = "py314"
+target-version = "py312"
 line-length = 120
 indent-width = 4
 
