feat: integrated dbt into DAG

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ _AIRFLOW_WWW_USER_PASSWORD=strong_password  # Strictly recommended to change
 POSTGRES_DB=TaxiTripsDB
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=strong_password  # Strictly recommended to change
+# POSTGRES_HOST=localhost  # Uncomment this to run dbt locally (outside Docker)
+# Note: When uncommented, make sure the PostgreSQL service is running externally
