--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -3,7 +3,7 @@ taxi_trips:
   outputs:
     dev:
       type: postgres
-      host: localhost
+      host: "{{ env_var('POSTGRES_HOST', 'postgres') }}"
       user: "{{ env_var('POSTGRES_USER', 'postgres') }}"
       password: "{{ env_var('POSTGRES_PASSWORD', 'strong_password') }}"
       port: 5432
