--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "taxi-trips-data-pipeline"
 version = "0.0.1"
-requires-python = "==3.12"
+requires-python = "==3.12.*"
 dependencies = [
     "apache-airflow[postgres]==3.1.5",
     "dbt-core>=1.11.2",
@@ -21,7 +21,7 @@ strict = []
 
 [tool.ruff]
 target-version = "py312"
-line-length = 100
+line-length = 120
 indent-width = 4
 
 [tool.ruff.lint]
