--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=strong_password  # Strictly recommended to change
 # POSTGRES_HOST=localhost  # Uncomment this to run dbt locally (outside Docker)
 # Note: When uncommented, make sure the PostgreSQL service is running externally
+
+# Superset
+SUPERSET_DATABASE_URI="postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST:-postgres}:5432/superset"
+SUPERSET_SECRET_KEY=supersecret_key  # Strictly recommended to change
+SUPERSET_ADMIN_USERNAME=admin
+SUPERSET_ADMIN_PASSWORD=strong_password  # Strictly recommended to change
+SUPERSET_ADMIN_EMAIL=admin@superset.local
+SUPERSET_ADMIN_FIRSTNAME=Admin
+SUPERSET_ADMIN_LASTNAME=User
